# chess

./: .gitignore  MODULE.bazel  README.md  thoughts.md  todo.md
lib/: BUILD  board.cc  board.h  board_coordinates.h  constants.cc  constants.h  ij.cc  ij.h  move.cc  move.h  move_manager.cc  move_manager.h  piece.cc  piece.h  piece_manager.cc  piece_manager.h  thoughts.md
lib/move_generators/: BUILD  bishop_move_generator.cc  bishop_move_generator.h  king_move_generator.h  knight_move_generator.cc  knight_move_generator.h  move_generator.cc  move_generator.h  move_generator_dispatch.cc  move_generator_dispatch.h  move_generator_test_util.cc  move_generator_test_util.h  pawn_move_generator.h  queen_move_generator.cc  queen_move_generator.h  queen_move_generator_test.cc  rook_move_generator.cc  rook_move_generator.h
lib/move_generators/bishop/: bishop_move_generator.cc  bishop_move_generator.h  bishop_move_generator_test.cc
lib/move_generators/king/: king_move_generator.cc  king_move_generator.h  king_move_generator_test.cc
lib/move_generators/knight/: knight_move_generator.cc  knight_move_generator.h  knight_move_generator_test.cc
lib/move_generators/pawn/: pawn_move_generator.cc  pawn_move_generator.h  pawn_move_generator_test.cc
lib/move_generators/queen/: queen_move_generator.cc  queen_move_generator.h  queen_move_generator_test.cc
lib/move_generators/rook/: rook_move_generator.cc  rook_move_generator.h  rook_move_generator_test.cc
main/: BUILD  chess-main.cc
